...
                        testID="change_counter"
                        title="Change Counter"
                        onPress={changeCounter}
                    />

                    <View style={styles.sectionContainer}>
                        <Text testID="screen_text" style={styles.sectionTitle}>
                            Home Screen
                        </Text>
                        <Text
                            testID="counter_value"
                            style={styles.sectionTitle}>
                            Counter {counter.toString()}
...
